# 2025-uqcs-hackathon

./: README.md  example_grades.html  requirements.txt  scrape.py
Frontend/: README.md  package.json
Frontend/public/: index.html
Frontend/src/: App.js  index.css
Frontend/src/components/: Navigation.js  PopupMonitor.js  WebviewPopup.js  config.js
Frontend/src/pages/: BetHistory.js  CreateBet.js  Dashboard.js  Home.js  Login.js  SignUp.js
backend/: pyproject.toml  test.html
backend/app/: __init__.py
backend/app/models/: db.py
backend/app/src/: grade_extractor.py  session.py  token_manager.py
backend/app/views/: Test_grade_scaper.py  proxy.py  routes.py
gambler/: Blackboard_example_grade.htm  grade_parser.py  preditor.py
