[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Kevin Luo",email = "hasakev@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12, <4.0"
dependencies = [
    "flask (>=3.1.1,<4.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "pandas (>=2.3.1,<3.0.0)",
    "cryptography (>=45.0.6,<46.0.0)",
    "playwright (>=1.54.0,<2.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "flask-cors (>=6.0.1,<7.0.0)",
    "flask-sqlalchemy (>=3.1.1,<4.0.0)",
    "gradescopeapi (>=1.5.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
